[metadata]

name = pygraph_mUsICm345
version = 0.0.1
author = vaibhavi
author_email = vaibhavilokegaonkar@gmail.com
description = This package implements basic graph and shortest path algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vaibhavi1707/pygraph
project_urls =
    Bug Tracker = https://github.com/Vaibhavi1707/pygraph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src